Make drawer have fixed positioning
Give the drawer element ``position: fixed`` so it doesn't scroll
offscreen as users scroll down to view content in the main builder view.

This was particularly a problem for the "3 Stacked" layout.

Addresses #692.

--- a/static/less/builder.less
+++ b/static/less/builder.less
@@ -504,7 +504,7 @@ button.preview {
 
 // Drawer
 #drawer-container {
-  position: absolute;
+  position: fixed; 
   right: 0;
   height: 100%;
   z-index: 998;
